# LorDeckCodeCpp

./: CMakeLists.txt  LICENSE  README.md
include/: LoRCard.hpp  LoRDeck.hpp  LoRError.hpp  LoRFaction.hpp  utils.hpp
src/: LoRDeck.cpp  main.cpp  utils.cpp
tests/: main.cpp  test.txt
